register user & verification email
